--- a/local/src_v6/components/pages/card/prod/index.pug
+++ b/local/src_v6/components/pages/card/prod/index.pug
@@ -11,7 +11,7 @@ include ../../../../components/base/accordion/index
             | &ensp;
             a(href='#') Alfaparf
         .prod__col.col-lg-6.col-12
-          .prod__top-text
+          .prod__top-text.right-text
             span Артикул:
             | &ensp;
             span 893900272
