--- a/local/templates/.default/_standart/catalog/element-with-slider-not-avail.html
+++ b/local/templates/.default/_standart/catalog/element-with-slider-not-avail.html
@@ -1420,6 +1420,7 @@
 																							<div class="slide"><a class="inner" href="../../img/tmp/sl-prod-1.png"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
 																							<div class="slide"><a class="inner" href="../../img/tmp/sl-prod-0.png"><img class="img" src="../../img/tmp/sl-prod-0.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
 																							<div class="slide"><a class="inner" href="../../img/tmp/sl-prod-1.png"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
+																							<div class="slide"><a class="inner" href="../../img/tmp/sl-prod-1.png"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></a></div>
 																						</div>
 																					</div>
 																				</div>
@@ -1427,16 +1428,19 @@
 																					<div class="wrap cursor inited-not">
 																						<div class="slider">
 																							<div class="slide">
-																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-0.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-0.png" alt="nav"></div>
 																							</div>
 																							<div class="slide">
-																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="nav"></div>
 																							</div>
 																							<div class="slide">
-																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-0.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-0.png" alt="nav"></div>
 																							</div>
 																							<div class="slide">
-																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="ÖLFLEX® CLASSIC 100 300/500 V"></div>
+																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="nav"></div>
+																							</div>
+																							<div class="slide">
+																								<div class="inner"><img class="img" src="../../img/tmp/sl-prod-1.png" alt="nav"></div>
 																							</div>
 																						</div>
 																					</div>
