--- a/local/templates/.default/card-2.html
+++ b/local/templates/.default/card-2.html
@@ -6,7 +6,7 @@
 		<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 		<meta name="cmsmagazine" content="76c5fb8872e8328840d5f6d32da019af">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-		<title>Карточка товара</title>
+		<title>Карточка товара 2</title>
 		<link rel="apple-touch-icon" sizes="180x180" href="manifest/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="manifest/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="manifest/favicon-16x16.png">
@@ -941,107 +941,60 @@
 									<div class="prod__col prod__col--right col-lg-7 col-12">
 										<div class="prod__row prod__row--top row">
 											<div class="prod__col col-lg-6 col-12">
-												<div class="prod__top-text"><span>Бренд:</span>&ensp;<a href="#">Alfaparf</a></div>
+												<div class="prod__top-text"><span>Бренд:</span>&ensp;<a href="#">Irisk</a></div>
 											</div>
 											<div class="prod__col col-lg-6 col-12">
 												<div class="prod__top-text right-text"><span>Артикул:</span>&ensp;<span>893900272</span></div>
 											</div>
 										</div>
-										<h1 class="prod__title small">Alfaparf Milano SDL Diamond Normal Hair <br>Кондиционер придающий блеск для нормальных волос</h1>
-										<div class="prod-tabs tabs-border tabs mb-0">
-											<ul class="nav nav-tabs list-reset" role="tablist">
-												<li class="nav-item"><a class="nav-link active" href="#tab-1" data-toggle="tab"><span>100 мл</span></a></li>
-												<li class="nav-item"><a class="nav-link" href="#tab-2" data-toggle="tab"><span>50 мл</span></a></li>
-											</ul>
-											<div class="tab-content">
-												<div class="tab-pane fade in active show" id="tab-1" role="tabpanel">
-													<div class="prod__cost">107.10 BYN</div>
-													<div class="prod__row prod__row--buy row">
-														<div class="prod__col prod__col--buy">
-															<div class="quantity js-quantity">
-																<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
-																<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
-																<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
-															</div>
-														</div>
-														<div class="prod__col prod__col--buy">
-																															<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span class="d-none d-lg-block">быстрая покупка</span><span class="d-block d-lg-none">Купить</span></button>
-														</div>
-														<div class="prod__col prod__col--buy">
-																															<button class="btn btn-primary-outline with-icon icon-left addToBasket js-addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
-														</div>
-														<div class="prod__col prod__col--buy d-none d-lg-block">
-																															<button class="btn btn-primary-outline with-icon addFavorites" type="button"><span class="icon"></span></button>
-														</div>
-													</div>
-																				<div class="accordion" id="accordion-30">
-																					<div class="acc-group">
-																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
-																							<div class="collapse" id="accordion-0" data-parent="#accordion-30">
-																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
-																							</div>
-																						</div>
-																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-1"><span>Доставка</span></a></div>
-																							<div class="collapse" id="accordion-1" data-parent="#accordion-30">
-																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
-																							</div>
-																						</div>
-																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-2"><span>Обмен и возврат</span></a></div>
-																							<div class="collapse" id="accordion-2" data-parent="#accordion-30">
-																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
-																							</div>
-																						</div>
-																					</div>
-																				</div>
-												</div>
-												<div class="tab-pane fade" id="tab-2" role="tabpanel">
-													<div class="prod__cost">107.10 BYN</div>
-													<div class="prod__row prod__row--buy row">
-														<div class="prod__col prod__col--buy">
-															<div class="quantity js-quantity">
-																<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
-																<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
-																<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
-															</div>
-														</div>
-														<div class="prod__col prod__col--buy">
-																															<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span class="d-none d-lg-block">быстрая покупка</span><span class="d-block d-lg-none">Купить</span></button>
-														</div>
-														<div class="prod__col prod__col--buy">
-																															<button class="btn btn-primary-outline with-icon icon-left addToBasket js-addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
-														</div>
-														<div class="prod__col prod__col--buy d-none d-lg-block">
-																															<button class="btn btn-primary-outline with-icon addFavorites" type="button"><span class="icon"></span></button>
-														</div>
-													</div>
-																				<div class="accordion" id="accordion-30">
-																					<div class="acc-group">
-																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
-																							<div class="collapse" id="accordion-0" data-parent="#accordion-30">
-																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
-																							</div>
-																						</div>
-																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-1"><span>Доставка</span></a></div>
-																							<div class="collapse" id="accordion-1" data-parent="#accordion-30">
-																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
-																							</div>
-																						</div>
-																						<div class="panel">
-																							<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-2"><span>Обмен и возврат</span></a></div>
-																							<div class="collapse" id="accordion-2" data-parent="#accordion-30">
-																								<div class="acc-body">Кондиционер превосходно кондиционирует и распутывает волосы. Придает ослепительный блеск без утяжеления. Идеально сбалансированная формула и оригинальная концентрация активных ингредиентов в составе обеспечивают волосы правильным количеством элементов, необходимых для того, чтобы день за днем ваши волосы выглядели превосходно! Входящий в состав мультивитаминный комплекс наполняет волосы жизненной силой. Содержит ненасыщенные жирные кислоты Омега-3 и Омега-6. Не содержит сульфатов, парабенов, парафиновых и минеральных масел. Активные ингредиенты: мультивитаминный комплекс, Омега-3, Омега-6. Способ применения: после использования шампуня Illuminating Low Shampoo нанести кондиционер на влажные волосы, равномерно распределив по всей длине. Оставить на одну-две минуты. Тщательно смыть водой.</div>
-																							</div>
-																						</div>
-																					</div>
-																				</div>
+										<h1 class="prod__title small">IRISK NUDE STRONG Каучуковый гель-лак 15мл</h1>
+										<div class="prod__select-wrap">
+											<select class="form-control ui-select">
+												<option value="0" selected="" disabled="">Выберите цвет</option>
+												<option value="1">Красный</option>
+											</select>
+										</div>
+										<div class="prod__cost">107.10 BYN</div>
+										<div class="prod__row prod__row--buy row">
+											<div class="prod__col prod__col--buy">
+												<div class="quantity js-quantity">
+													<button class="quantity__btn quantity__btn--minus js-quantity-btn js-quantity-btn-minus"></button>
+													<input class="quantity__input js-quantity-input" type="number" value="1" min="1">
+													<button class="quantity__btn quantity__btn--plus js-quantity-btn js-quantity-btn-plus"></button>
 												</div>
 											</div>
+											<div class="prod__col prod__col--buy">
+																												<button class="btn btn-primary" data-toggle="modal" data-target="#fastBuyModal" type="button"><span class="d-none d-lg-block">быстрая покупка</span><span class="d-block d-lg-none">Купить</span></button>
+											</div>
+											<div class="prod__col prod__col--buy">
+																												<button class="btn btn-primary-outline with-icon icon-left addToBasket js-addToBasket" type="button"><span class="icon"></span><span>в корзину</span></button>
+											</div>
+											<div class="prod__col prod__col--buy d-none d-lg-block">
+																												<button class="btn btn-primary-outline with-icon addFavorites" type="button"><span class="icon"></span></button>
+											</div>
 										</div>
+																	<div class="accordion" id="accordion-30">
+																		<div class="acc-group">
+																			<div class="panel">
+																				<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-0"><span>Описание</span></a></div>
+																				<div class="collapse" id="accordion-0" data-parent="#accordion-30">
+																					<div class="acc-body">Каучуковый гель-лак Irisk Nude Strong избавит вас от необходимости применять специальную каучуковую базу под гель-лак. Его густота, плотность и эластичность позволит вам легко, быстро и безопасно отрастить длину,а также укрепить тонкие и ломкие ногти. Френч-маникюр с новинкой займет существенно меньше времени, ведь покрытие сохнет в лампе всего 30-40 секунд!</div>
+																				</div>
+																			</div>
+																			<div class="panel">
+																				<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-1"><span>Доставка</span></a></div>
+																				<div class="collapse" id="accordion-1" data-parent="#accordion-30">
+																					<div class="acc-body">Каучуковый гель-лак Irisk Nude Strong избавит вас от необходимости применять специальную каучуковую базу под гель-лак. Его густота, плотность и эластичность позволит вам легко, быстро и безопасно отрастить длину,а также укрепить тонкие и ломкие ногти. Френч-маникюр с новинкой займет существенно меньше времени, ведь покрытие сохнет в лампе всего 30-40 секунд!</div>
+																				</div>
+																			</div>
+																			<div class="panel">
+																				<div class="acc-heading"><a class="link svg-arrow collapsed" href="#" data-toggle="collapse" data-target="#accordion-2"><span>Обмен и возврат</span></a></div>
+																				<div class="collapse" id="accordion-2" data-parent="#accordion-30">
+																					<div class="acc-body">Каучуковый гель-лак Irisk Nude Strong избавит вас от необходимости применять специальную каучуковую базу под гель-лак. Его густота, плотность и эластичность позволит вам легко, быстро и безопасно отрастить длину,а также укрепить тонкие и ломкие ногти. Френч-маникюр с новинкой займет существенно меньше времени, ведь покрытие сохнет в лампе всего 30-40 секунд!</div>
+																				</div>
+																			</div>
+																		</div>
+																	</div>
 									</div>
 								</div>
 							</div>
