--- a/local/src_v6/components/base/blockquote2/index.pug
+++ b/local/src_v6/components/base/blockquote2/index.pug
@@ -1,4 +1,5 @@
 blockquote.style-2
-  .h2.title Цитата на плашке.
-  .h3.title-medium Цвет и форма плашки может меняться дизайнером. Ограничение: плашка создаётся средствами CSS.
-  | Он выполняет сразу несколько функций: скрывает емкую встроенную батарею на 9000 мАч, используется в качестве «ножки», когда Yoga Tablet 10 лежит на столе, и «ручки», когда планшет выступает в качестве электронной книги.
+  p.mb-0
+    | Если Вас не устраивает ни один из приведенных ниже вариантов (сроки, стоимость и т. д.) -
+    a(href='#') свяжитесь
+    | с нашим менеджером и он обязательно подберет для вас оптимальный вариант!
