--- a/local/src_v6/components/base/blockquote2/style.scss
+++ b/local/src_v6/components/base/blockquote2/style.scss
@@ -7,14 +7,16 @@
 // styles *************************************************************************************************************
 
 blockquote.style-2 {
-  margin: 65px 0;
-  padding: 30px 25px;
+  padding: 38px 39px 40px;
+  margin: 40px 0 0;
   background: $brand-white;
-  box-shadow: $box-shadow-base;
+  border: 1px solid $brand-gray-10;
+  font-size: 18px;
+  line-height: 1.62;
 
-  @media (max-width: $screen-xs-max) {
-    margin: 40px 0;
-    padding: 25px 20px;
+  @media (max-width: $screen-sm-max) {
+    margin: 20px 0 0;
+    padding: 20px;
   }
 
   .title {
