--- a/local/src_v6/components/base/tabs-accordion/style.scss
+++ b/local/src_v6/components/base/tabs-accordion/style.scss
@@ -41,7 +41,12 @@
   .acc-body {
 
     @media (max-width: $screen-sm-max) {
-      padding: 2rem 1.8rem;
+      padding: 20px 10px 20px 10px;
+    }
+
+    @media (max-width: $screen-xs-max) {
+      padding-left: 5;
+      padding-right: 0;
     }
   }
 }
