--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -112,7 +112,7 @@ $font-size-lg:                      1.8rem;
 $font-size-sm:                      1.6rem;
 $font-size-xs:                      1.6rem;
 
-$line-height-base:                  1.6;
+$line-height-base:                  1.62;
 
 // Headings
 $headings-margin-bottom:            0.5rem;
@@ -138,13 +138,13 @@ $line-height-h6:                    1.3;
 $head-margin-h1:                    0 0 3rem;
 $head-margin-h1-small:              0 0 1.5rem;
 $head-margin-h2:                    2.5rem 0 1.3rem;
-$head-margin-h3:                    2.1rem 0 0.65rem;
+$head-margin-h3:                    2.1rem 0 1.3rem;
 $head-margin-h4:                    1.4rem 0 0.65rem;
 $head-margin-h5:                    1.6rem 0 0.65rem;
 $head-margin-h6:                    1.5rem 0 0.65rem;
 
 // Paragraph
-$paragraph-margin-bottom:           .7em;
+$paragraph-margin-bottom:           1.28em;
 
 // Links
 $link-decoration:                   none;
