page blog:undone

--- a/local/src_v6/core/main/variables/style.scss
+++ b/local/src_v6/core/main/variables/style.scss
@@ -42,8 +42,8 @@ $site-max-width:                    1920px;
 // brands
 $brand-1:                           #080508;
 $brand-1-active:                    rgba($brand-1, .8);
-$brand-2:                           #CF1818;
-$brand-2-active:                    #CF1818;
+$brand-2:                           #515855;
+$brand-2-active:                    rgba($brand-2, .8);
 $brand-3:                           #57a801;
 $brand-3-active:                    #438101;
 
