--- a/local/templates/.default/article.html
+++ b/local/templates/.default/article.html
@@ -909,22 +909,70 @@
 							<div class="article content-wrap">
 								<div class="row justify-content-center">
 									<div class="col-xl-8 col-lg-11 col-12">
-										<div class="row">
-											<div class="col-12"><img src="img/tmp/article-01.jpg" alt="alt"></div>
+										<div class="row-pics">
+											<div class="col-pics"><img src="img/tmp/article-01.jpg" alt="alt"></div>
 										</div>
 										<p>Если вы пристально следите за нейл-трендами, то 2021 год не принесет вам особых откровений. Однако всегда полезно закрепить пройденный материал и взглянуть на знакомые тенденции под другим углом. Обсуждаем красивый дизайн ногтей 2021 — и прикладываем актуальные фото.</p>
 										<h2>Яркие полоски</h2>
 										<p>Маникюр и макияж в духе импрессионистов продолжает будоражить воображение стилистов и визажистов (популярнее сегодня разве что абстракционисты). Советуем не усложнять задачу: вооружитесь разноцветными лаками и маникюрной кистью и повторите образ с показа Pyer Moss. Полтора десятка ярких небрежных мазков, нанесенных вдоль (по росту) ногтевой пластины, не только будут выглядеть стильно и эффектно, но и визуально удлинят пальцы.</p>
-										<div class="d-flex">
-											<div><img src="img/tmp/article-02.jpg" alt="alt"></div>
-											<div><img src="img/tmp/article-03.jpg" alt="alt"></div>
+										<div class="d-none d-lg-block">
+											<div class="row-pics">
+												<div class="col-pics"><img src="img/tmp/article-02.jpg" alt="alt"></div>
+												<div class="col-pics"><img src="img/tmp/article-03.jpg" alt="alt"></div>
+											</div>
+										</div>
+										<div class="d-block d-lg-none">
+																		<div class="sl-pics">
+																			<div class="wrap cursor inited-not">
+																				<div class="slider">
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-02.jpg" alt="alt"></div>
+																					</div>
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-03.jpg" alt="alt"></div>
+																					</div>
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-02.jpg" alt="alt"></div>
+																					</div>
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-03.jpg" alt="alt"></div>
+																					</div>
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-02.jpg" alt="alt"></div>
+																					</div>
+																				</div>
+																											<div class="sl-nav"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
+																			</div>
+																										<div class="js-sl-pager sl-pager"></div>
+																		</div>
 										</div>
 										<h2>Точки</h2>
 										<p>Длинные ногти, сужающиеся к кончикам, — один из самых горячих трендов последних лет. И это понятно: с одной стороны, такой маникюр выглядит легкомысленно и непринужденно, а с другой — требует серьезного подхода. Если вы хотите создать дневной маникюр с изюминкой, берите пример с мастеров, работавших на показе Oscar de la Renta. Ногти моделей, накрашенные нежным персиковым лаком, они украсили деликатными белыми точками. Похожий маникюр был замечен и на шоу rag & bone. Проще всего такой образ повторить с помощью доттера (или наших фотоинструкций).</p>
-										<div class="row">
-											<div class="col-lg-4 col-sm-6 col-12"><img src="img/tmp/article-04.jpg" alt="alt"></div>
-											<div class="col-lg-4 col-sm-6 col-12"><img src="img/tmp/article-05.jpg" alt="alt"></div>
-											<div class="col-lg-4 col-sm-6 col-12"><img src="img/tmp/article-06.jpg" alt="alt"></div>
+										<div class="d-none d-lg-block">
+											<div class="row-pics">
+												<div class="col-pics"><img src="img/tmp/article-04.jpg" alt="alt"></div>
+												<div class="col-pics"><img src="img/tmp/article-05.jpg" alt="alt"></div>
+												<div class="col-pics"><img src="img/tmp/article-06.jpg" alt="alt"></div>
+											</div>
+										</div>
+										<div class="d-block d-lg-none">
+																		<div class="sl-pics">
+																			<div class="wrap cursor inited-not">
+																				<div class="slider">
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-04.jpg" alt="alt"></div>
+																					</div>
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-05.jpg" alt="alt"></div>
+																					</div>
+																					<div class="slide">
+																						<div class="inner"><img src="img/tmp/article-06.jpg" alt="alt"></div>
+																					</div>
+																				</div>
+																											<div class="sl-nav"><a class="prev" href="#"></a><a class="next" href="#"></a></div>
+																			</div>
+																										<div class="js-sl-pager sl-pager"></div>
+																		</div>
 										</div>
 									</div>
 								</div>
