--- a/local/src_v6/components/block/b-section/style.scss
+++ b/local/src_v6/components/block/b-section/style.scss
@@ -55,9 +55,13 @@ $_b-section-default-bg: $brand-white;
     padding: 0 10px;
   }
 
-  &--sl-products-bottom,
-  &--sl-article {
+  &--sl-products-bottom {
     padding-top: 76px;
+    padding-bottom: 80px;
+  }
+
+  &--sl-article-bottom {
+    padding-top: 0;
     padding-bottom: 80px;
   }
 }
