pages stocks, stock

--- a/local/src_v6/components/block/b-head/index.pug
+++ b/local/src_v6/components/block/b-head/index.pug
@@ -2,6 +2,9 @@ mixin b-head(data)
   if (data)
     .b-head(class=data.className)
       .b-head__row
+        if (data.subtitle)
+          .b-head__col.b-head__col--subtitle
+            .b-head__subtitle !{data.subtitle}
         if (data.title)
           .b-head__col.b-head__col--title
             -
