--- a/local/src_v6/components/block/b-head/style.scss
+++ b/local/src_v6/components/block/b-head/style.scss
@@ -14,6 +14,16 @@ $_b-head-gutter-width: 30px;
   &__col {
     padding: 0 ($_b-head-gutter-width / 2);
 
+    &--subtitle {
+      flex: 0 0 100%;
+      max-width: 100%;
+      margin-bottom: 25px;
+
+      @media (max-width: $screen-sm-max) {
+        margin-bottom: 10px;
+      }
+    }
+
     &--title {
       margin: 0 0 12px;
     }
@@ -27,6 +37,14 @@ $_b-head-gutter-width: 30px;
     &--link {
       margin: 0 0 12px auto;
     }
+  }
+
+  &__subtitle {
+    @include font-family-bold();
+    font-size: 16px;
+    letter-spacing: .05em;
+    text-transform: uppercase;
+    color: #333333;
   }
 
   &__title {
