--- a/local/src_v6/components/base/type/style.scss
+++ b/local/src_v6/components/base/type/style.scss
@@ -30,6 +30,10 @@ small,
   font-size: 80%; // Add the correct font size in all browsers
 }
 
+.text-center {
+  text-align: center;
+}
+
 // Content grouping
 //
 // 1. Add the correct box sizing in Firefox.
